...
      BlocProvider.of<SharezoneContext>(context).streamingSharedPreferences,
    );
    final cache = ProfilePageHintCache(api.user.isAnonymous(), streamingCache);
    return Padding(
      padding: const EdgeInsets.only(right: 8),
      child: IconButton(
        key: const ValueKey('my-profile-button-E2E'),
        tooltip: context.l10n.profileAvatarTooltip,
        onPressed: () {
          cache.setProfilePageHintAsClicked();
          final navigation = BlocProvider.of<NavigationBloc>(context);
          navigation.navigateTo(NavigationItem.accountPage);
        },
...
