...
  final bool isAnonymous;

  @override
  Widget build(BuildContext context) {
    return Center(
      child: DangerButtonOutlined(
        key: const ValueKey('sign-out-button-E2E'),
        icon: const Icon(Icons.exit_to_app),
        onPressed: () => signOut(context, isAnonymous),
        label: Text(context.l10n.myProfileSignOutButton.toUpperCase()),
      ),
    );
  }
...
